5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1785_3139.log
== TEST (2019-05-30 10:16:58) 
-- CODE:
v = array(eval(input("vetor de media: ")))
i=0
k=1
m=0
while(i<size(v)):
	m= m + (v[i])**1/3 
	i=i+1
	k=k+1
mc = (m/k)**3
print(round(mc,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:17:44) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de media: ")))
i=0
k=1
m=0
while(i<size(v)):
	m= m + (v[i])**1/3 
	i=i+1
	k=k+1
mc = (m/k)**3
print(round(mc,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:19:30) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de media: ")))
i=0
k=1
m=0
while(i<size(v)):
	m= m + (v[i])**1/3 
	i=i+1
	k=k+1
mc = (m/k)**3
print(round(mc,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:21:37) 
-- CODE:
from numpy import*
v = array(eval(float(input("vetor de media: "))))
i=0
k=1
m=0
while(i<size(v)):
	m= m + (v[i])**1/3 
	i=i+1
	k=k+1
mc = (m/k)**3
print(round(mc,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:21:54) 
-- CODE:
from numpy import*
v = (eval(input("vetor de media: ")))
i=0
k=1
m=0
while(i<size(v)):
	m= m + (v[i])**1/3 
	i=i+1
	k=k+1
mc = (m/k)**3
print(round(mc,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:42:00) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de media: ")))
i=0
k=1
m=0
while(i<size(v)):
	m= m + (v[i])**1/3 
	i=i+1
	k=k+1
mc = (m/k)**3
print(round(mc,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:43:30) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de media: ")))
i=0
k=1
m=0
while(i<size(v)):
	m= m + (v[i])**1/3 
	i=i+1
	k=k+1
mc = (m/size(v))**3
print(round(mc,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:44:43) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de media: ")))
i=0
k=1
m=0
while(i<size(v)):
	m= m + (v[i])**1/3 
	i=i+1
	
mc = (m/size(v))**3
print(round(mc,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:45:24) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de media: ")))
i=0
k=1
m=0
while(i<size(v)):
	m= m + (v[i])**1/3 
	i=i+1
	
mc = (m/i+1)**3
print(round(mc,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:46:31) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de media: ")))
i=0
k=1
m=0
while(i<size(v)):
	m= m + (v[i])**1/3 
	i=i+1
	
mc = (m/size(v))**3
print(round(mc,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:46:51) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de media: ")))
i=0
k=1
m=0
while(i<size(v)):
	m= m + (v[i])**1/3 
	i=i+1
	
mc = (m/size(v))**3
print(round(mc,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:53:40) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de media: ")))
i=0
k=1
m=0
while(i<size(v)):
	m= m + (v[i])**1/3 
	i=i+1
	
mc = (m/size(v))**3
print(round(mc,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:53:55) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de media: ")))
i=0
k=1
m=0
while(i<size(v)):
	m= m + (v[i])**1/3 
	i=i+1
	
mc = (m/size(v))**3
print(round(mc,2))
-- EXECUTION TIME:
0.370845
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.36
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
2.11
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
1.1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:54:04) 
-- CODE:
from numpy import*
v = array(eval(input("vetor de media: ")))
i=0
k=1
m=0
while(i<size(v)):
	m= m + (v[i])**1/3 
	i=i+1
	
mc = (m/size(v))**3
print(round(mc/2,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
